# collective.elastic.ingest

./: .env  .gitignore  .pre-commit-config.yaml  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTORS.rst  LICENSE.rst  MANIFEST.in  README.rst  constraints.txt  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  release.yaml
container/: Dockerfile  entrypoint.sh
examples/: .env  docker-compose.yml  elasticsearch-lexicon-german.txt
examples/analysis/: analysis-german.json  elasticsearch-lexicon-german.txt  mappings-german-analysis.json
examples/docker/: .env  docker-compose.yml
examples/docker-es/: .env  docker-compose.yml
examples/docker-os/: .env  docker-compose.yml
examples/docker/configuration/: mappings.json
examples/local/: .env  .env-es  .env-os  mappings.json
src/collective/elastic/ingest/: __init__.py  analysis.py  celery.py  client.py  deleteindex.py  elastic.py  ingest.py  ingestion.py  logging.py  mapping.py  mappings.json  plone.py  plone_test.py  postprocessing.py  postprocessing_test.py  preprocessing.json  preprocessing.py  preprocessing_test.py  preprocessings.json  removal.py  section.py  security.py
src/collective/elastic/ingest/analysis/: __init__.py  analysis.json.example  analysis.py
src/collective/elastic/ingest/ingest/: __init__.py  blocks.py  rid.py  section.py  security.py  vocabularyfields.py
src/collective/elastic/ingestion/: celery.py  mapping.py  removal.py
src/collective/es/ingestion/: celery.py  elastic.py  ingest.py  mapping.py  plone.py
